# aoot

./: .env.example  Makefile  README.md  docker-compose.yml
aoot/: .gitignore  Dockerfile  alembic.ini  example.env  pyproject.toml
aoot/assets/: account.json
aoot/migrations/: env.py
aoot/migrations/versions/: 6e7300839296_.py
aoot/src/application/: base.py
aoot/src/application/ports/: __init__.py  crypto_exchange_service.py  tickers_info_service.py
aoot/src/application/token/: __init__.py  add_token.py  add_tokens.py  buy_tokens.py
aoot/src/bootstrap/: configs.py  logger.py
aoot/src/bootstrap/dependencies/: __init__.py
aoot/src/bootstrap/dependencies/providers/: __init__.py  adapters.py  common.py  config.py  database.py  interactors.py  repository.py
aoot/src/bootstrap/entrypoints/: scheduler.py
aoot/src/common/: logger.py
aoot/src/domain/interfaces/: transaction_manager.py
aoot/src/domain/ports/: transaction_manager.py
aoot/src/domain/shared/: __init__.py  entity.py
aoot/src/domain/tokens/: __init__.py  entity.py  repository.py  token.py  vo.py
aoot/src/infra/adapters/: __init__.py  base.py  crypto_exchange_service.py  dummy_transaction_manager.py  tickers_info_service.py
aoot/src/infra/dependencies/: __init__.py
aoot/src/infra/dependencies/providers/: __init__.py  config.py  database.py  repository.py
aoot/src/infra/models/: __init__.py  base.py  token.py
aoot/src/infra/tasks/: __init__.py
aoot/tests/: conftest.py
aoot/tests/infra/adapters/: test_crypto_exchange_service.py  test_tickers_info_service.py
(+12 files in other folders)
