[tool.poetry]
name = "aoot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mypy = "^1.15.0"
sqlalchemy = "^2.0.40"
dishka = "^1.5.3"
python-dotenv = "^1.1.0"
pytest = "^8.3.5"
colorlog = "^6.9.0"
pytest-asyncio = "^0.26.0"
asyncpg = "^0.30.0"
alembic = "^1.15.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src/"]
addopts = "-s"
